Fix weird neofetch device model jumps

--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ footer {
     display: flex;
     flex-direction: column;
     margin: auto auto auto 1em;
+    width: 30%;
 }
 
 #neofetch > feature {
